# person_module

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
definitions/: camera_node_template.node.info.yaml  camera_node_template.node.yaml
src/: __init__.py  default.node.info.yaml  default.node.yaml  person_rest_node.py
